# YaeLocus

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  PROJECT_ANALYSIS.md  README.md  install.bat  pyproject.toml  run.py  setup.py  uninstall.bat
.github/: CODEOWNERS  CONTRIBUTING.md  CONTRIBUTORS.md  FUNDING.yml  SECURITY.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci.yml  release.yml
data/: 地址列表.csv  清单.xlsx
geocode/: __init__.py  __main__.py  cache.py  cli.py  config.py  coords.py  errors.py  geocoder.py  logger.py  main.py  map_visualizer.py  models.py
geocode/output/: geocode_cache.json
skills/: yaelocus.md
tests/: conftest.py  test_cache_advanced.py  test_cli.py  test_coords_advanced.py  test_errors.py  test_geocode.py  test_geocoder.py  test_logger.py  test_map_visualizer.py
tests/fixtures/: __init__.py  api_responses.py
